fix: Ant Design form not aligning properly on desktop mode (temporary fix)

--- a/diversitytracker.web/src/base.css
+++ b/diversitytracker.web/src/base.css
@@ -24,7 +24,6 @@ html{
   height: 100vh;
   max-width: 575px;
   background-size: cover;
-  overflow: hidden;
 }
 
 .page-container{
